modified:   .dockerignore 	new file:   .env.example 	modified:   .gitignore 	modified:   admin_server.py 	modified:   html/admin.html 	new file:   html/login.html 	modified:   html/scripts/main.js 	modified:   html/styles/admin.css modified:   portal_data.json 	modified:   requirements.txt

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@ data/*
 html/data/*
 .claud/*
 
+# Environment variables (contains sensitive passwords)
+.env
+
 # Node / frontend
 node_modules/
 dist/
